# Revna

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  admin.html  alembic.ini  docker-compose.yml  index.html  main.js  netlify.toml  nixpacks.toml  onboarding.html  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  schema.sql  style.css
backend/: config.py  database.py  main.py
backend/api/: health.py  users.py  webhooks.py
backend/core/: constants.py  prompts.py
backend/migrations/: env.py
backend/migrations/versions/: 001_351e69243b95_initial_schema.py  002_fix_telegram_chat_id_bigint.py  003_add_garmin_credentials.py  004_add_google_refresh_token.py
backend/models/: __init__.py  coach_history.py  conversation.py  effectiveness.py  feeling.py  health_data.py  notification.py  user.py
backend/services/: ai.py  garmin.py  google_fit.py  health.py  notifications.py  scheduler.py  telegram.py  tracking.py  wearable.py
landing/: index.html  main.js  style.css
netlify/functions/: setup-db.js  subscribe.js
