[project]
name = "revna"
version = "0.1.0"
description = "Revna — Your body talks. Revna listens. AI health coaching via messaging."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",  # Sync driver for Alembic migrations
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "redis>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",  # TestClient
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
